# hnx-toolchain

./: .crates.toml  .gitignore  Cargo.toml  README.md  setup-toolchain.sh  setup.sh
config/: aarch64-hnx-ohlink.cfg  aarch64-hnx-ohlink.cmake
crates/elf2ohlink/: Cargo.toml
crates/elf2ohlink/src/: main.rs
crates/ohlink-ar/: Cargo.toml
crates/ohlink-ar/src/: main.rs
crates/ohlink-format/: Cargo.toml
crates/ohlink-format/src/: lib.rs
crates/ohlink-ld/: Cargo.toml
crates/ohlink-ld/src/: main.rs
crates/ohlink-nm/: Cargo.toml
crates/ohlink-nm/src/: main.rs
crates/ohlink-objdump/: Cargo.toml
crates/ohlink-objdump/src/: main.rs
design/: ohlink-format.md
hello/: Cargo.toml  Makefile  hello.elf  hello.exe.ohlink  hello.ohlink  link-elf.ld
hello/src/: main.rs
kernel/: Cargo.toml
kernel/examples/: load_hello.rs
kernel/fs/: ohlink_load.rs
kernel/src/: fs.rs  lib.rs
scripts/: ohlink.magic
